# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.32.11
	Martin Väth <martin at mvath.de>:
	- Add support for meson/ninja build system (fast, but less compatible).
	  Probably autotools and meson will both continue to be supported.
	- Fix return value in _eix completion. Thanks to
	  Mikael Magnusson <mikachu at gmail.com>
	- Fix option and description typos in configure.ac
	- Replace /etc/make.conf by the new path /etc/portage/make.conf in docs
	- eix-layman help text: Avoid mentioning source commands in make.conf
	  since most users will use nowadays repositories.conf

*eix-0.32.10
	Martin Väth <martin at mvath.de>:
	- Fix subversion guessing without CAREMODE=true
	- Fix wrong prepending of CXXFLAGS and LDFLAGS
	- Fix stress test for C++11 (fixes compilation with clang & gcc++ lib)
	- Fix adding of -fstack-protector-strong and friends
	- Add -fstack-check
	- Fix stress test in ./configure to not spit warning which breaks
	- Fix some sign type conversions
	- Support fallthrough attribute
	- Correctly support mpx with --enable-strong-security if available
	- Fix get_geometry() error check
	- Initialize some variables redundantly to make stupid compiler happy

*eix-0.32.9
	Martin Väth <martin at mvath.de>:
	- Support -* in profile "packages" files, see
	  https://bugs.gentoo.org/show_bug.cgi?id=610670
	- Fix remove_line(): Do not consider removing removed lines a change
	- Only treat 0 and - as "false" if nothing else follows, see
	  https://bugs.gentoo.org/show_bug.cgi?id=616972
	- internal: Add some pure attributes where possible
	- internal: Switch off format-nonliteral warning for strftime

*eix-0.32.8
	Martin Väth <martin at mvath.de>:
	- IMPORTANT: For testing scripts, it is strongly recommended to use
	  DEFAULT_MATCH_FIELD=error
	  DEFAULT_MATCH_ALGORITHM=error
	  (and to always specify match field/algorithm explicitly).
	  This way the scripts are independent of current and/or future changes
	  of the default heuristics for these values.